# orca

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  nextest.toml
.github/workflows/: job-prek.yml  job-test.yml
autoimprove/: loop.py  program.md
hooks/: orca-hook.sh
skills/orca/: SKILL.md
src/: cli.rs  daemon.rs  main.rs  spawn.rs  state.rs  tmux.rs
src/cli/: mod.rs  tests.rs
src/config/: mod.rs  tests.rs
src/daemon/: mod.rs  tests.rs
src/events/: mod.rs  tests.rs
src/names/: mod.rs  tests.rs
src/prompts/: mod.rs  tests.rs
src/spawn/: mod.rs  tests.rs
src/state/: mod.rs  tests.rs
src/tmux/: mod.rs  tests.rs
src/types/: mod.rs
src/wake/: mod.rs  tests.rs
src/worktree/: mod.rs  tests.rs
tests/: integration.rs
