[package]
name = "orca"
version = "0.0.7"
edition = "2024"
description = "Orca — simple agent orchestrator"

[[bin]]
name = "orca"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
fs2 = "0.4"
regex = "1"
which = "7"
dirs = "6"
libc = "0.2"
md5 = "0.7"
scopeguard = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
